--- a/static/css/responsivo.css
+++ b/static/css/responsivo.css
@@ -3,6 +3,20 @@
         display: none;
     }
 }
+
+
+/*tela menu*/
+@media screen and (max-width:414px){
+    .boas-vindas{
+        display: none;
+    }
+    .menu{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+    }
+}
 /*
 width 375
 414
