--- a/static/css/style.css
+++ b/static/css/style.css
@@ -8,7 +8,7 @@
 /*************************************************/
 
 /*TELA DE MENU*************************************/
-.background{
+.background-menu{
     background-color: #3B4E90;
 }
 
@@ -18,4 +18,47 @@
     font-size: x-large;
     max-width: 100%;
 }
-/* **************************** */
+/* ************************************************/
+
+/* TELA MENU ADM**********************************/
+.icone-menu{
+    background-color: #0984E3;
+    display: none;
+}
+.menu-adm-mobile{
+    display: none;
+}
+.traco{
+    background-color:white;
+    margin: 10px;
+    height: 10px;
+    width: 80px;
+}
+.background-menu-adm{
+    background-color: #0984E3;
+}
+.menu-adm{
+    border:1px solid white;
+   
+}
+.painel{
+    display: flex;
+    border: 1px solid white;
+   
+}
+.container-painel{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border: 1px solid white;
+    width: 100%;
+    
+}
+.painel-menu{
+   display: flex;
+   flex-wrap: wrap;
+  /* max-width: 50%;*/
+   align-items: center;
+   justify-content: center;
+}
+/**************************************************/
