ajustes em campos dos formularios

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -99,3 +99,7 @@
 .background-menu-administrador{
     background-color:#0984E3;
 }
+/*Tela atualiação ******************/
+.background-menu-atualiza-colaborador{
+    background-color:#0A7AA6;
+}
