--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -4,30 +4,28 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../static/css/style.css">
-    <link rel="stylesheet" href="../static/css/responsivo.css">
+    <link rel="stylesheet" href="/css/style.css"/>
+    <link rel="stylesheet" href="/css/responsivo.css"/>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/jquery-validation@1.19.5/dist/jquery.validate.js">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
                  <link rel="stylesheet" th:href="@{/bootstrap/css/bootstrap.min.css}"/>
-                <link rel="stylesheet" th:href="@{/css/style.css}"/>
-                <link rel="stylesheet" th:href="@{/css/responsivo.css}"/>
     <title>Managment Login</title>
 </head>
 <body class="m-auto mt-5 d-flex login">
 
     <div class=" m-auto d-flex  login rounded-5 col-xl-6 ">
         <div class="d-inline-flex justify-content-center align-items-center">
-          <img class="cadeado col-md-6 w-100 h-50" th:src="@{../static/img/iconLogin.png" alt="cadeado}">
+          <img class="cadeado col-md-6 w-100 h-50" th:src="@{/images/iconLogin.png}" alt="cadeado">
         </div>
              
-        <form action="#" method="GET" class="col-md-8 text-white p-5 ">
+        <form th:action="@{/autenticar}" method="POST" th:object="${user}" class="col-md-8 text-white p-5 ">
             <div class="mb-3">
               <label class="form-label">Usuário</label>
-              <input type="text" class="form-control" id="user" required>
+              <input type="text" th:field="${user.login}" class="form-control" id="user" required>
             </div>
             <div class="mb-3">
               <label class="form-label">Senha</label>
-              <input type="password" class="form-control" id="senha" required>
+              <input type="password" th:field="${user.senha}" class="form-control" id="senha" required>
             </div>
             <div class="mb-3 form-check">
               <input type="checkbox" class="form-check-input" id="remember-senha">
