--- a/src/main/resources/templates/cadMorador.html
+++ b/src/main/resources/templates/cadMorador.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+    <html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org" >
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -57,11 +58,11 @@
 
                 <div class="container-painel">
                     <div class="painel-menu" >
-                        <form id="validaForms" >
+                        <form id="validaForms" th:object="${morador}" >
                           
                             <div class="mb-3">
                                 <label for="name" class="form-label text-white">Nome Completo</label>
-                                <input type="text" class="form-control" id="nome" name = " nome" required pattern="[a-z]{1,20}$">
+                                <input type="text" th:field="${morador.nome}" class="form-control" id="nome" name = " nome" required pattern="[a-z]{1,20}$">
                                 
                                 <select name="documento" id="documento" required>
                                     <option value="">RG</option>
