--- a/src/main/resources/templates/cadMorador.html
+++ b/src/main/resources/templates/cadMorador.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
      <link rel="stylesheet" th:href="@{/css/style.css}"/>
     <link rel="stylesheet" th:href="@{/css/responsivo.css}"/>
-    <link rel="stylesheet" href="@{/https://cdn.jsdelivr.net/npm/jquery-validation@1.19.5/dist/jquery.validate.js}"/>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/jquery-validation@1.19.5/dist/jquery.validate.js">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
    
     <title>Managment Login</title>
@@ -58,7 +58,7 @@
 
                 <div class="container-painel">
                     <div class="painel-menu" >
-                        <form id="validaForms" th:object="${morador}" >
+                        <form id="validaForms" th:object="${morador}" method="POST" >
                           
                             <div class="mb-3">
                                 <label for="name" class="form-label text-white">Nome Completo</label>
