ajustes no projeto

--- a/src/main/resources/templates/menu.html
+++ b/src/main/resources/templates/menu.html
@@ -20,18 +20,18 @@
         <div>
             <div class="menu">
                 <div>
-                    <a href="menuAdm.html">
-                        <img class="icone" src="../img/iconeAdm.png" alt="iconeAdm">
+                    <a th:href="@{/menuAdm.html}">
+                        <img class="icone" th:src="@{/img/iconeAdm.png}" alt="iconeAdm">
                     </a>
                 </div>
                 <div>
-                    <a href="menuAdmMorador.html">
-                        <img class="icone" src="../img/iconMorador.png" alt="iconeMorador">
+                    <a th:href="@{/menuAdmMorador.html}">
+                        <img class="icone" th:src="@{/image/iconMorador.png}" alt="iconeMorador">
                     </a>
                 </div>
                 <div>
-                    <a href="#">
-                        <img class="icone" src="../img/iconConsAgenda.png" alt="iconeAdm">
+                    <a th:href="@{/menuAdmMorador.html}">
+                        <img class="icone" th:src="@{/img/iconConsAgenda.png}" alt="iconeAdm">
                     </a>
                 </div>
             </div>
