--- a/src/main/resources/templates/consultaMorador.html
+++ b/src/main/resources/templates/consultaMorador.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+
      <html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org" >
 <head>
     <meta charset="UTF-8">
@@ -22,17 +22,17 @@
     <main>
             <div id="menu-mobile" class="menu-adm-mobile">
                 <div>
-                    <a href="novoMorador.html">
+                    <a th:href="@{/cadMorador}">
                         <img class="icone" th:src="@{/images/iconCtrlNovoMorador.png}" alt="iconeAdm">
                     </a>
                 </div>
                 <div>
-                    <a href="atualizaMorador.html">
+                    <a th:href="@{/atualizaMorador.html}">
                         <img class="icone" th:src="@{/images/iconUpdateCadastro.png}" alt="iconeMorador">
                     </a>
                 </div>
                 <div>
-                    <a href="consultaMorador.html">
+                    <a th:href="@{/consultaMorador.html}">
                         <img class="icone" th:src="@{/images/iconCtrlConsultarCadastro.png}" alt="iconeAdm">
                     </a>
                 </div>
@@ -40,17 +40,17 @@
             <div class="painel">
                 <div class="menu-adm">
                     <div>
-                        <a href="novoMorador.html">
+                        <a th:href="@{/cadMorador.html}">
                             <img class="icone" th:src="@{/images/iconCtrlNovoMorador.png}" alt="iconeAdm">
                         </a>
                     </div>
                     <div>
-                        <a href="atualizaMorador.html">
+                        <a th:href="@{/atualizaMorador.html}">
                             <img class="icone" th:src="@{/images/iconUpdateCadastro.png}" alt="iconeMorador">
                         </a>
                     </div>
                     <div>
-                        <a href="consultaMorador.html">
+                        <a th:href="@{/consultaMorador.html}">
                             <img class="icone" th:src="@{/images/iconCtrlConsultarCadastro.png}" alt="iconeAdm">
                         </a>
                     </div>
@@ -58,20 +58,30 @@
 
                 <div class="container-painel">
                     <div class="painel-menu" >
-                        <form id="validaForms" th:object="${morador}" method="POST" >
+                        <form id="validaForms" th:action="@{/consultarMorador}" th:object="${morador}" method="POST" >
                             <div class="mb-3">
                                 <label for="matricula" class="form-label  text-white">Matricula</label>
                                 <input th:field="${morador.id}" type="text" class="form-control" id="matricula" name = "matricula" required> 
                                 <button type="submit" class="btn btn-primary">Pesquisar</button>
+                        
                             </div>
+                            
                             <span class="text-white" th:text="morador"></span><br>
-                            <input th:field="${morador.nome}" class="text-white"/>
+                            <span th:text="${morador.nome}" class="text-white"/><br>
+                            <span class="text-white" th:text="sexo"></span><br>
+                            <span th:text="${morador.sexo}" class="text-white"/><br>
+                            <span class="text-white" th:text="documento"></span><br>
+                            <span th:text="${morador.rg}" class="text-white"/>
                             <br>
+                              <span class="text-white" th:text="tipo"></span><br>
+                            <span th:text="${morador.tipo}" class="text-white"/><br>
+                                <!--
                             <span class="text-white" th:text="apartamento"></span><br>
                             <input th:field="${apartamento.numeroApartamento}" class="text-white"/>
                             <br>
                             <span class="text-white" th:text="veiculo"></span><br>
                             <input th:field="${veiculo.placa}" class="text-white"/>
+                                -->
                         </form>
                        
                     </div>
