--- a/src/main/resources/templates/cadMorador.html
+++ b/src/main/resources/templates/cadMorador.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt">
     <html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org" >
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
      <link rel="stylesheet" th:href="@{/css/style.css}"/>
     <link rel="stylesheet" th:href="@{/css/responsivo.css}"/>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/jquery-validation@1.19.5/dist/jquery.validate.js">
+
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
    
     <title>Managment Login</title>
@@ -58,7 +58,7 @@
 
                 <div class="container-painel">
                     <div class="painel-menu" >
-                        <form id="validaForms" th:object="${morador}" method="POST" >
+                        <form th:action="@{/cadastroMorador}" id="validaForms" th:object="${morador}" method="POST" >
                           
                             <div class="mb-3">
                                 <label for="name" class="form-label text-white">Nome Completo</label>
@@ -74,7 +74,7 @@
                                 <select th:field="${morador.sexo}" name="genero"  id="sexo" required>
                                     <option th:selected="${morador.sexo == m }" value="m">Masculino</option>
                                     <option th:selected="${morador.sexo == f }" value="f">Feminino</option>
-                                </select><label for="genero" class="form-label"></label>
+                                </select>
                                 <br>
                                      <label for="name" class="form-label text-white">tipo de morador</label>
                                 <select th:field="${morador.tipo}" name="titular"  id="titular" required>
@@ -94,7 +94,7 @@
                                 <input th:field="${veiculo.modelo}" type="text" class="form-control" id="modelo" name = "modelo" required>
 
                                 <label for="placa" class="form-label text-white">Placa</label>
-                                <input th:field="${veiculo.placa}" type="number" class="form-control" id="placa" name = "placa" required>
+                                <input th:field="${veiculo.placa}" type="text" class="form-control" id="placa" name = "placa" required>
 
                                 <label for="cor" class="form-label text-white">Cor</label>
                                 <input th:field="${veiculo.cor}" type="text" class="form-control" id="cor" name = "cor" required>
@@ -119,7 +119,7 @@
                                 <input th:field="${apartamento.andar}" type="text" class="form-control" id="andar" name = "andar" required>
                             </div>
                             
-                            <button type="submit" class="btn btn-primary">Cadastrar</button>
+                            <button type="submit" id="cadastrar"  class="btn btn-primary">Cadastrar</button>
                         </form>
                        
                     </div>
@@ -130,8 +130,10 @@
         
    </main>
     <script th:src="@{/bootstrap/js/bootstrap.min.js}"></script>
-          <script th:src="@{/js/script.js}"></script>
-          <script th:src="@{/js/validar.js}"></script>
-    <script src="static/js/script.js"></script>
+    <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/jquery-validation@1.19.5/dist/jquery.validate.js"></script>
+    <script th:src="@{/js/script.js}"></script>
+    <script th:src="@{/js/validar.js}"></script>
+   <!-- <script src="static/js/script.js"></script>-->
 </body>
 </html>
