--- a/src/main/resources/templates/menu.html
+++ b/src/main/resources/templates/menu.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
+   <!-- <meta charset="UTF-8">-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../static/css/style.css">
-    <link rel="stylesheet" href="../static/css/responsivo.css">
+    <link rel="stylesheet" th:href="@{/css/style.css}"/>
+    <link rel="stylesheet" th:href="@{/css/responsivo.css}"/>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/jquery-validation@1.19.5/dist/jquery.validate.js">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
    
@@ -20,24 +20,27 @@
         <div>
             <div class="menu">
                 <div>
-                    <a th:href="@{/menuAdm.html}">
-                        <img class="icone" th:src="@{/img/iconeAdm.png}" alt="iconeAdm">
+                    <a th:href="@{/menuAdm}">
+                        <img class="icone" th:src="@{/images/iconeAdm.png}" alt="iconeAdm">
                     </a>
                 </div>
                 <div>
-                    <a th:href="@{/menuAdmMorador.html}">
-                        <img class="icone" th:src="@{/image/iconMorador.png}" alt="iconeMorador">
+                    <a th:href="@{/menuAdmMorador}">
+                        <img class="icone" th:src="@{/images/iconMorador.png}" alt="iconeMorador">
                     </a>
                 </div>
                 <div>
-                    <a th:href="@{/menuAdmMorador.html}">
-                        <img class="icone" th:src="@{/img/iconConsAgenda.png}" alt="iconeAdm">
+                    <a th:href="@{/menuAdmMorador}">
+                        <img class="icone" th:src="@{/images/iconConsAgenda.png}" alt="iconeAdm">
                     </a>
                 </div>
             </div>
         </div>
         
    </main>
+   <script th:src="@{/bootstrap/js/bootstrap.min.js}"></script>
+          <script th:src="@{/js/script.js}"></script>
+          <script th:src="@{/js/validar.js}"></script>
     <script src="static/js/script.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </body>
