--- a/src/main/resources/templates/menuAdm.html
+++ b/src/main/resources/templates/menuAdm.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../static/css/style.css">
-    <link rel="stylesheet" href="../static/css/responsivo.css">
+    <link rel="stylesheet" th:href="@{/css/style.css}"/>
+    <link rel="stylesheet" th:href="@{/css/responsivo.css}"/>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/jquery-validation@1.19.5/dist/jquery.validate.js">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
    
@@ -21,36 +21,36 @@
     <main>
             <div id="menu-mobile" class="menu-adm-mobile">
                 <div>
-                    <a href="http://">
-                        <img class="icone" src="../img/iconeAdm.png" alt="iconeAdm">
+                    <a th:href="@{/menuAdm}">
+                        <img class="icone" th:src="@{/images/iconeAdm.png}" alt="iconeAdm">
                     </a>
                 </div>
                 <div>
-                    <a href="http://">
-                        <img class="icone" src="../img/iconMorador.png" alt="iconeMorador">
+                    <a th:href="@{/menuAdmMorador}">
+                        <img class="icone" th:src="@{/images/iconMorador.png}" alt="iconeMorador">
                     </a>
                 </div>
                 <div>
-                    <a href="http://">
-                        <img class="icone" src="../img/iconConsAgenda.png" alt="iconeAdm">
+                    <a th:href="@{/menuAdmMorador}">
+                        <img class="icone" th:src="@{/images/iconConsAgenda.png}" alt="iconeAdm">
                     </a>
                 </div>
             </div>
             <div class="painel">
                 <div class="menu-adm">
                     <div>
-                        <a href="menuAdm.html">
-                            <img class="icone" src="../img/iconCrtlAdm.png" alt="iconeAdm">
+                        <a th:href="@{/menuAdm}">
+                            <img class="icone" th:src="@{/images/iconCrtlAdm.png}" alt="iconeAdm">
                         </a>
                     </div>
                     <div>
-                        <a href="menuAdmMorador.html">
-                            <img class="icone" src="../img/iconCrtlMorador.png" alt="iconeMorador">
+                        <a th:href="@{/menuAdmMorador}">
+                            <img class="icone" th:src="@{/images/iconCrtlMorador.png}" alt="iconeMorador">
                         </a>
                     </div>
                     <div>
-                        <a href="http://">
-                            <img class="icone" src="../img/iconCrtlConsAgend.png" alt="iconeAdm">
+                        <a th:href="@{/menuAdmMorador}">
+                            <img class="icone" th:src="@{/images/iconCrtlConsAgend.png}" alt="iconeAdm">
                         </a>
                     </div>
                 </div>
@@ -58,23 +58,23 @@
                 <div class="container-painel">
                     <div class="painel-menu" >
                         <div>
-                            <a href="http://">
-                                <img class="icone-menu-adm" src="../img/iconCtrlCadMorador.png" alt="iconeAdm">
+                            <a th:href="@{/cadMorador}">
+                                <img class="icone-menu-adm" th:src="@{/images/iconCtrlCadMorador.png}" alt="iconeAdm">
+                            </a>
+                        </div>
+                        <div>
+                            <a th:href="@{/cadColaborador}">
+                                <img class="icone-menu-adm" th:src="@{/images/iconCtrlCadFuncionario.png}" alt="iconeMorador">
+                            </a>
+                        </div>
+                        <div>
+                            <a th:href="@{/menuAdmMorador}">
+                                <img class="icone-menu-adm" th:src="@{/images/iconCtrlLancarDocumento.png}" alt="iconeAdm">
                             </a>
                         </div>
                         <div>
                             <a href="http://">
-                                <img class="icone-menu-adm" src="../img/iconCtrlCadFuncionario.png" alt="iconeMorador">
-                            </a>
-                        </div>
-                        <div>
-                            <a href="http://">
-                                <img class="icone-menu-adm" src="../img/iconCtrlLancarDocumento.png" alt="iconeAdm">
-                            </a>
-                        </div>
-                        <div>
-                            <a href="http://">
-                                <img class="icone-menu-adm" src="../img/iconCtrlEmitirDocumento.png" alt="iconeAdm">
+                                <img class="icone-menu-adm" th:src="@{/images/iconCtrlEmitirDocumento.png}" alt="iconeAdm">
                             </a>
                         </div>
                     </div>
@@ -84,7 +84,10 @@
         
         
    </main>
-    <script src="../static/js/script.js"></script>
+    <script th:src="@{/bootstrap/js/bootstrap.min.js}"></script>
+          <script th:src="@{/js/script.js}"></script>
+          <script th:src="@{/js/validar.js}"></script>
+    <script src="static/js/script.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </body>
 </html>
